objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Student_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student_Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Description__c</fullName>
        <label>Student_Description</label>
        <length>233</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_s_Account_wao__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student&apos;s Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students (Student&apos;s Account)</relationshipLabel>
        <relationshipName>Students1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_s_Accountshshhs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student&apos;s Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students (Student&apos;s Account)</relationshipLabel>
        <relationshipName>Students2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Teacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teacher</label>
        <referenceTo>Teacher__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>